# tldr

./: .tldr  Cargo.toml  README.md
.github/skills/codebase-orientation/: SKILL.md
.github/workflows/: rust.yml
src/: main.rs  parser.rs  types.rs  walker.rs
